# mycli

./: .gitignore  README.md  dockerfile  mycli.py  outputfile.json  pyproject.toml  setup.py
mycli/: cli.py
